--- a/Elmla3eb/Base.lproj/FieldsCell.xib
+++ b/Elmla3eb/Base.lproj/FieldsCell.xib
@@ -147,7 +147,7 @@
                                                             <constraint firstAttribute="width" secondItem="jRR-hF-ePc" secondAttribute="height" multiplier="1:1" id="JbG-8i-YD7"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirming Reservetion" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="a81-MV-HUy">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirmed Reservations" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="a81-MV-HUy">
                                                         <rect key="frame" x="31" y="4" width="213" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
